fix: visibility of match details

--- a/MMM-SoccerLiveScore.css
+++ b/MMM-SoccerLiveScore.css
@@ -105,7 +105,6 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  z-index: -1;
 }
 
 .MMM-SoccerLiveScore-vertical-infinite-scroll .MMM-SoccerLiveScore-inner-wrapper {
